--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,62 @@
-# Compiled class file
+# C
+*.o
+*.obj
+*.so
+*.exe
+*.out
+*.a
+*.dylib
+*.dll
+*.cproj
+
+# C++
+*.cc
+*.cpp
+*.cxx
+*.hpp
+*.hh
+*.hxx
+*.ii
+*.ipp
+*.inl
+*.lib
+*.pdb
+
+# 編譯產物
+/build/
+/bin/
+/Debug/
+/Release/
+
+# Java
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.iml
+*.log
+*.javadoc
+*.project
+*.classpath
+*.settings/
+*.idea/
+*.vs/
+target/
+out/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# JavaScript
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+.cache/
+.env
+.vscode/
+.DS_Store
+
+# Others
+*.swp
+*.swo
+*.tmp
